# resume_builder

./: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
mystageproject/: .env  asgi.py  settings.py  urls.py  wsgi.py
resume/: admin.py  models.py  pyproject.toml  urls.py  views.py
resume/migrations/: 0001_initial.py  0002_alter_personalinfo_user_image.py
resume/templates/: base.html  cv.html  education_create.html  index.html  personal_create.html  work_create.html
